<resources>
    <string name="app_name">parnas</string>

    <!--로그인-->
    <string name="login">https://www.parnashotel.com/login</string>
    <!--회원가입-->
    <string name="signUp">https://www.parnashotel.com/signUp</string>
    <!--객실예약-->
    <string name="rsvn">https://www.parnashotel.com/reservationSchedule?tab=0</string>
    <!--호텔찾기-->
    <string name="search">https://www.parnashotel.com/reservationSchedule?tab=1</string>
    <!--다이닝 예약-->
    <string name="dining">https://www.parnashotel.com/reservationDining</string>
    <!--마이페이지-->
    <string name="my_page">https://www.parnashotel.com/myPage/dashboard/</string>
    <!--예약조회-->
    <string name="reservation_check">https://www.parnashotel.com/reservationCheck</string>

    <string name="main_finish_toast">뒤로 버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="error_camera_permission">카메라 사용 권한을 허용해야 사용할 수 있습니다.</string>
    <string name="popup_camera_permission">카메라 사용 권한을 허용해야 사용할 수 있습니다.\n설정창으로 가시겠습니까?</string>
    <string name="popup_storage_permission">카메라 및 내부저장소 사용 권한을 허용해야 사용할 수 있습니다.\n설정창으로 가시겠습니까?</string>
    <string name="error_storage_permission">카메라 및 내부저장소 사용 권한을 허용해야 사용할 수 있습니다.</string>

    <!-- 버튼 -->
    <string name="btn_yes">네</string>
    <string name="btn_no">아니요</string>
    <string name="btn_confirm">확인</string>

    <!--카카오 로그인-->
    <string name="kakao_app_key">ad25a9e0b13535621097c8a06b3928a7</string>
    <string name="kakao_app_key_add_kakao">kakaoad25a9e0b13535621097c8a06b3928a7</string>

    <!-- 최초 접속 url -->
    <string name="base_url">https://www.parnashotel.com/</string>
    <!-- 점검일 경우 접속 url -->
    <string name="sub_url">http://183.99.79.4/info</string>

    <!-- 푸시채널 관련 -->
    <string name="channel_id">parnas</string>
    <string name="channel_name">PARNAS</string>
    <string name="channel_desc">푸시알림</string>

    <string name="main_login_tv">로그인</string>
    <string name="main_reg_tv">회원가입</string>
    <string name="todo">TODO</string>
    <string name="main_msg">내가 디자인하는\n새로운 라이프 스타일 멤버십</string>
    <string name="reward_more">리워드 혜택 자세히 보기</string>
    <string name="waist_title">어디로 떠나시겠습니까</string>
    <string name="room_reservation">객실 예약</string>
    <string name="dining_reservations">다이닝 예약</string>
    <string name="hotel_search">호텔 찾기</string>
    <string name="reservation_inquiry">예약 조회</string>
    <string name="main_footer_msg">리워즈 회원이 되어 전용 상품을 누려보세요</string>

    <!--마이페이지-->
    <string name="page_name">REWARD</string>
    <string name="myPage">My page</string>
    <string name="greeting">안녕하세요,</string>
    <string name="btm_sheet_point">43,402</string>

</resources>