<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/superView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/area01"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@color/color_0D192C"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/main_logo"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/header_title" />

                <TextView
                    android:id="@+id/loginTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/regTv"
                    android:fontFamily="@font/noto_sans_kr_regular"
                    android:padding="10dp"
                    android:text="@string/main_login_tv"
                    android:textColor="@color/white"
                    android:textSize="13dp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/regTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/noto_sans_kr_regular"
                    android:padding="10dp"
                    android:text="@string/main_reg_tv"
                    android:textColor="@color/white"
                    android:textSize="13dp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_kr_regular"
                    android:text="@string/main_msg"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="25dp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_59c4c8"
                    android:fontFamily="@font/noto_sans_kr_regular"
                    android:paddingHorizontal="15dp"
                    android:text="@string/reward_more"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    tools:ignore="SmallSp" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/overlayView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/area01"
        android:layout_marginBottom="-25dp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/waist_title"
        android:textAlignment="center"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:background="@drawable/background_border_59c4c8"
        tools:ignore="NotSibling" />

    <LinearLayout
        android:id="@+id/area02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/rsvn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageButton
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_rsv_room"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/room_reservation"
                    android:fontFamily="@font/noto_sans_kr_regular"
                    android:textColor="@color/black"
                    android:textSize="13dp"
                    tools:ignore="RelativeOverlap" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dining"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageButton
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_rsv_dinning"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_kr_regular"
                    android:text="@string/dining_reservations"
                    android:textColor="@color/black"
                    android:textSize="13dp"
                    tools:ignore="RelativeOverlap" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageButton
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_search_hotel"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_kr_regular"
                    android:text="@string/hotel_search"
                    android:textColor="@color/black"
                    android:textSize="13dp"
                    tools:ignore="RelativeOverlap" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/reservation_check"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageButton
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_search_rsv_status"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_kr_regular"
                    android:text="@string/reservation_inquiry"
                    android:textColor="@color/black"
                    android:textSize="13dp"
                    tools:ignore="RelativeOverlap" />

            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:paddingHorizontal="20dp"
            android:clipToPadding="false"
            tools:ignore="RtlSymmetry" />

        <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="75dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:scaleType="fitXY"
                android:src="@drawable/recommend_sample"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_centerInParent="true"
                android:fontFamily="@font/noto_sans_kr_regular"
                android:text="@string/main_footer_msg"
                android:textColor="@color/white"
                android:textSize="13dp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>