<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grade_c"
    tools:context=".menu.myPage.RewardActivity">

    <RelativeLayout
        android:id="@+id/reward_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="20dp">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/title_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/title_page_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_app_name"
            android:layout_centerHorizontal="true"
            android:text="@string/page_name"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/reward_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/reward_header"
        android:paddingHorizontal="20dp"
        android:paddingVertical="50dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/grade_club"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/greeting"/>

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <include
            android:id="@+id/bottom_sheet_layout"
            layout="@layout/bottom_sheet" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>